# go-socketio-client

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  constants.bzl  go.mod
encoding/: BUILD.bazel  binary_encoder.go  binary_encoder_test.go
